Behebt den Fehler, dass das "CRegistrationObjekt" null ist!
Fügt Schnittstelle für startgame hinzu.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -15,13 +15,12 @@
     Please enable Javascript and reload this page!</h2>
    </noscript>
 
-   <div id="websocket" class="container">
+   <div id="gamecontrol" class="container">
        <div class="row">
            <div class="col-md-6">
                <form class="form-group">
-                   <label for="connect">Websocket connection:</label>
-                   <button id="connect" class="btn btn-default" type="submit">Connect</button>
-                   <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect</button>
+                   <label for="startgame">Websocket connection:</label>
+                   <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
                </form>
            </div>
        </div>
