Dirty Workaround implementiert und getestet.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -21,6 +21,7 @@
                <form class="form-group">
                    <label for="startgame">Websocket connection:</label>
                    <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
+                   <button id="connect" class="btb btn-default" type="submit">Open Websocket Connection</button>
                </form>
            </div>
        </div>
@@ -45,19 +46,6 @@
                     <button id="allin" class="btn btn-default" type="submit">All-In</button>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div id="gamestate" class="container">
-        <div class="col-md-12">
-            <table id="gameinformationtable" class="table table-striped">
-                <thead>
-                <tr>
-                    <th><h2>Game Informations</h2></th>
-                </tr>
-                </thead>
-                <tbody id="gameinformations"></tbody>
-            </table>
         </div>
     </div>
 
