Zweiter Websocket ins Programm implementiert.
"ETokenLinker" speichert die UUID und die Stomp-SessionId, sodass mittels des Tokens der ebenfalls über den zweiten Websocket gesendet wird, die SessionId bekommt.
Mit dieser bekommt man dann das "CSession"-Objekt, auf dem man dann die WebSocketSession des zweiten Websockets in das darin enthaltende IPlayer Objekt speichern kann.

Dies ermöglicht, das senden von Nachrichten im "CNotificationService" über die im Spieler gespeicherte WebSocketSession.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -22,6 +22,7 @@
                    <label for="startgame">Websocket connection:</label>
                    <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
                    <button id="connect" class="btb btn-default" type="submit">Open Websocket Connection</button>
+                   <button id="connectStomp" class="btn btn-default" type="submit">Open Stomp Websocket Connection</button>
                </form>
            </div>
        </div>
