Verschiebt die "Display"-Funktion in den Stomp-Websocket.
(Es werden nun wieder Nachrichten angezeigt).
Außerdem weist das Programm jedem Spieler einen eigenen Stomp-Endpoint zu, damit die Nachrichten nur noch an den Spieler gehen für den sie bestimmt sind und nicht mehr an alle.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -9,6 +9,8 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <script src="/webjars/bootstrap/4.1.1/css/bootstrap.min.css"></script>
+    <script src="webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="/game.js"></script>
 </head>
 <body>
@@ -23,7 +25,6 @@
                <form class="form-group">
                    <label for="startgame">Websocket connection:</label>
                    <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
-                   <button id="connect" class="btb btn-default" type="submit">Open Websocket Connection</button>
                    <button id="connectStomp" class="btn btn-default" type="submit">Open Stomp Websocket Connection</button>
                </form>
            </div>
