Implementiert die Leave-Funktion sowohl serverseitig als auch in die UI.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -25,6 +25,7 @@
                <form class="form-group">
                    <label for="startgame">Websocket connection:</label>
                    <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
+                   <button id="leave" class="btn btn-default" type="submit">Leave Game</button>
                    <button id="connectStomp" class="btn btn-default" type="submit">Open Stomp Websocket Connection</button>
                </form>
            </div>
