Behebt Anzeigefehler der Tisch-Karten.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -10,7 +10,7 @@
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="/webjars/bootstrap/4.1.1/css/bootstrap.min.css"></script>
-    <script src="webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="/webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="/game.js"></script>
 </head>
 <body>
@@ -63,9 +63,9 @@
                 <div>
                     <h4>Your Handcards:</h4>
                     <label for="firstHandCard">1. Handcard</label>
-                    <textarea id="firstHandCard" name="firstHandCard"></textarea>
+                    <textarea rows="2" cols="25" id="firstHandCard" name="firstHandCard"></textarea>
                     <label for="secondHandCard">2. Handcard</label>
-                    <textarea id="secondHandCard" name="secondHandCard"></textarea>
+                    <textarea rows="2" cols="25" id="secondHandCard" name="secondHandCard"></textarea>
                 </div>
             </div>
 
@@ -73,11 +73,11 @@
                 <div>
                     <h4>Table Cards:</h4>
                     <h5>Flop:</h5>
-                    <textarea id="flopCard" name="firstFlopCards" placeholder="Flop ist noch nicht gelegt!"></textarea>
+                    <textarea rows="4" cols="25" id="flopCard" name="firstFlopCards" placeholder="Flop ist noch nicht gelegt!"></textarea>
                     <h5>Turn:</h5>
-                    <textarea id="turnCard" name="turnCard" placeholder="Turn ist noch nicht gelegt!"></textarea>
+                    <textarea rows="2" cols="25" id="turnCard" name="turnCard" placeholder="Turn ist noch nicht gelegt!"></textarea>
                     <h5>River:</h5>
-                    <textarea id="riverCard" name="riverCard" placeholder="River ist noch nicht gelegt!"></textarea>
+                    <textarea rows="2" cols="25"id="riverCard" name="riverCard" placeholder="River ist noch nicht gelegt!"></textarea>
                 </div>
             </div>
         </div>
