--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -4,97 +4,91 @@
     <meta charset="UTF-8">
     <title>Game</title>
 
-
-
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/webjars/bootstrap/4.1.1/css/bootstrap.min.css"></script>
     <script src="/webjars/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="/game.js"></script>
+
+    <link href="/webjars/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-   <noscript><h2 style="color: #FF0000">Seems your browser doesn't support
+<noscript><h2 style="color: #FF0000">Seems your browser doesn't support
     Javascript! Websocket relies on Javascript being enabled.
     Please enable Javascript and reload this page!</h2>
-   </noscript>
+</noscript>
 
-   <div id="gamecontrol" class="container">
-       <div class="row">
-           <div class="col-md-6">
-               <form class="form-group">
-                   <label for="startgame">Websocket connection:</label>
-                   <button id="startgame" class="btn btn-default" type="submit">Start Game</button>
-                   <button id="leave" class="btn btn-default" type="submit">Leave Game</button>
-                   <button id="connectStomp" class="btn btn-default" type="submit">Open Stomp Websocket Connection</button>
-               </form>
-           </div>
-       </div>
-   </div>
-    <div id="gameactions" class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-inline">
-                    <div class="form-group">
-                        <button id="raise" class="btn btn-default" type="submit">Raise</button>
-                        <input type="text" id="raise-amount" class="form-control" placeholder="Raise - Amount"/>
-                    </div>
-                    <div class="button">
-                        <button id="call" class="btn btn-default" type="submit">Call</button>
-                    </div>
-                    <div class="button">
-                        <button id="check" class="btn btn-default" type="submit">Check</button>
-                    </div>
-                    <div class="button">
-                        <button id="fold" class="btn btn-default" type="submit">Fold</button>
-                    </div>
-                    <div class="button">
-                        <button id="allin" class="btn btn-default" type="submit">All-In</button>
-                    </div>
-                </div>
-            </div>
+<div id="gamecontrol" class="container">
+    <form>
+        <div class="form-group">
+            <label for="connectStomp">Websocket connection:</label>
+            <button id="connectStomp" class="btn btn-primary" type="submit">Open Stomp Connection</button>
+        </div>
+    </form>
 
-            <div class="col-md-6">
-                <div>
-                    <label for="chipCount">Your current Chip Count:</label>
-                    <textarea id="chipCount" name="chipCount">
-                    </textarea>
-                </div>
-                <div>
-                    <h4>Your Handcards:</h4>
-                    <label for="firstHandCard">1. Handcard</label>
-                    <textarea rows="2" cols="25" id="firstHandCard" name="firstHandCard"></textarea>
-                    <label for="secondHandCard">2. Handcard</label>
-                    <textarea rows="2" cols="25" id="secondHandCard" name="secondHandCard"></textarea>
-                </div>
-            </div>
+    <h5> Game Controls</h5>
+    <div class="btn-group" role="group">
+        <button id="startgame" class="btn btn-primary" type="submit">Start Game</button>
+        <button id="leave" class="btn btn-primary" type="submit">Leave Game</button>
+    </div>
+</div>
 
-            <div class="col-md-6">
-                <div>
-                    <h4>Table Cards:</h4>
-                    <h5>Flop:</h5>
-                    <textarea rows="4" cols="25" id="flopCard" name="firstFlopCards" placeholder="Flop ist noch nicht gelegt!"></textarea>
-                    <h5>Turn:</h5>
-                    <textarea rows="2" cols="25" id="turnCard" name="turnCard" placeholder="Turn ist noch nicht gelegt!"></textarea>
-                    <h5>River:</h5>
-                    <textarea rows="2" cols="25"id="riverCard" name="riverCard" placeholder="River ist noch nicht gelegt!"></textarea>
-                </div>
+<div id="gameactions" class="container">
+    <div class="input-group">
+        <div class="input-group-prepend"></div>
+        <button id="raise" class="btn btn-primary" type="submit">Raise</button>
+        <input type="text" id="raise-amount" class="form-control" placeholder="Raise - Amount" maxlength="10"/>
+    </div>
+
+    <div class="btn-group-vertical" role="group">
+        <button id="call" class="btn btn-primary" type="submit">Call</button>
+        <button id="check" class="btn btn-primary" type="submit">Check</button>
+        <button id="fold" class="btn btn-primary" type="submit">Fold</button>
+        <button id="allin" class="btn btn-primary" type="submit">All-In</button>
+    </div>
+</div>
+
+<div id="informations" class="container">
+    <div class="row">
+        <div class="col-xl-6">
+            <label for="chipCount">Your current Chip Count:</label>
+            <textarea rows="1" cols="10" id="chipCount" name="chipCount"></textarea>
+        </div>
+        <div class="col-xl-8">
+            <h4>Your Handcards:</h4>
+            <h5>1. Handcard</h5>
+            <textarea rows="2" cols="25" id="firstHandCard" name="firstHandCard"></textarea>
+            <h5>2. Handcard</h5>
+            <textarea rows="2" cols="25" id="secondHandCard" name="secondHandCard"></textarea>
+        </div>
+
+        <div class="col-xl-8">
+            <div>
+                <h4>Table Cards:</h4>
+                <h5>Flop:</h5>
+                <textarea rows="4" cols="25" id="flopCard" name="firstFlopCards"
+                          placeholder="Flop ist noch nicht gelegt!"></textarea>
+                <h5>Turn:</h5>
+                <textarea rows="2" cols="25" id="turnCard" name="turnCard"
+                          placeholder="Turn ist noch nicht gelegt!"></textarea>
+                <h5>River:</h5>
+                <textarea rows="2" cols="25" id="riverCard" name="riverCard"
+                          placeholder="River ist noch nicht gelegt!"></textarea>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container">
-        <div class="col-md-12">
-            <table id="game" class="table table-striped">
-                <thead>
-                <tr><h2>Gamestate</h2></tr>
-                </thead>
-                <tbody id="gamestate">
-                </tbody>
-            </table>
-        </div>
+<div class="container">
+    <div class="col-xl-12">
+        <table id="game" class="table">
+            <thead>
+            <tr><h2>Gamestate</h2></tr>
+            </thead>
+            <tbody id="gamestate">
+            </tbody>
+        </table>
     </div>
-
-
+</div>
 </body>
 </html>
