Fügt weitere Features zur leave-Funktion hinzu.
Spieler werden benachrichtigt, falls ein Spieler das Spiel verlässt. Außerdem wird bei zu wenigen Spielern der verbleibende Spieler automatisch zum Hub redirected.

Außerdem wurde die Breite der Eingabefelder reduziert.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -85,7 +85,7 @@
             </div>
 
             <div class="col-xl-4">
-                <table id="game" class="table">
+                <table id="game-information" class="table">
                     <thead>
                     <tr><h4>Gamestate:</h4></tr>
                     </thead>
